se crea ventana modal para reproduccion de video y se ejustan views para tablet

--- a/gmb-video/src/app/pages/home-component/home.component.html
+++ b/gmb-video/src/app/pages/home-component/home.component.html
@@ -1,11 +1,11 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col bg-dark">
+    <div class="col bg-light">
       <app-topbar></app-topbar>
     </div>
   </div>
   <div class="row">
-    <div class="col-3 bg-dark text-center">
+    <div class="col-3 bg-light text-center">
       <app-sidebar></app-sidebar>
     </div>
     <div class="col">
