--- a/gmb-video/src/app/shared/sidebar/sidebar.component.html
+++ b/gmb-video/src/app/shared/sidebar/sidebar.component.html
@@ -1,17 +1,16 @@
 <nav class="nav flex-column">
   <!-- Logo del sitio -->
-  <a class="nav-link text-light mb-4" [routerLink]="['/pages/videos']">
+  <a class="nav-link text-bg-dark mb-4" [routerLink]="['/pages/videos']">
     <img src="../../../assets/images/MonteblancoLogo.png" height="80" alt="Logo Monteblanco">
   </a>
 
   <!-- Link para galería de videos -->
-  <a class="nav-link text-light mb-4" [routerLink]="['/pages/videos']" aria-label="Ver galería de videos">
-    <span class="fa fa-file mx-2 text-info"></span> Galería
+  <a class="nav-link text-dark mb-4" [routerLink]="['/pages/videos']" aria-label="Ver galería de videos">
+    <span class="fa fa-file-video-o mx-2 "></span> Galería
   </a>
 
   <!-- Link para subir video -->
-  <a class="nav-link text-light mb-4" [routerLink]="['/pages/upload']" aria-label="Subir video">
-    <span class="fa fa-angles-up mx-2 text-info"></span> Subir video
+  <a class="nav-link text-dark mb-4" [routerLink]="['/pages/upload']" aria-label="Subir video">
+    <span class="fa fa-angles-up mx-2"></span> Subir video
   </a>
-
 </nav>
