--- a/gmb-video/src/app/pages/file-upload-component/file-upload.component.html
+++ b/gmb-video/src/app/pages/file-upload-component/file-upload.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-5 d-flex justify-content-center">
-  <div style="width: 40rem;">
+  <div style="max-width: 80%;">
     <div class="form-group mb-3">
       <input type="file" class="form-control" (change)="onFileSelected($event)" required>
     </div>
@@ -22,6 +22,8 @@
         aria-valuemin="0" aria-valuemax="100">{{ progress }}%</div>
     </div>
 
-    <button type="button" class="btn btn-primary mb-3" (click)="upload()">Upload</button>
+    <button type="button" class="btn btn-custom-upload mb-3" (click)="upload()">
+      <i class="fa fa-upload"></i> Upload
+    </button>
   </div>
 </div>
