--- a/gmb-video/src/app/shared/topbar/topbar.component.html
+++ b/gmb-video/src/app/shared/topbar/topbar.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid mx-5">
-    <a class="navbar-brand fw-bold text-light"><span class="text-info">Bienvenido</span> {{ user.fullName | titlecase}}</a>
+    <a class="navbar-brand fw-bold text-dark"><span class="text-bg text-custom">Bienvenido </span> {{ user.fullName | titlecase}}</a>
     <button class="btn btn-outline-info mt-2" type="submit" (click)="logout()">Salir</button>
   </div>
 </nav>
