--- a/gmb-video/src/app/auth/pages/login/login.component.html
+++ b/gmb-video/src/app/auth/pages/login/login.component.html
@@ -1,12 +1,16 @@
-<div class="container mt-5 d-flex justify-content-center align-items-center">
-  <div class="card my-5 border-2 border-dark" style="width: 23rem;">
+<div class="container mt-5 d-flex justify-content-center align-items-center position-relative">
+
+  <a class="nav-link text-bg-dark mb-4 position-absolute image-custom"  [routerLink]="['/pages/videos']"> <!-- Añade estilos de posición absoluta y z-index aquí -->
+    <img src="../../../assets/images/MonteblancoLogo.png" height="80" alt="Logo Monteblanco">
+  </a>
+  <div class="card my-5 border-4 border-light" style="width: 23rem;">
     <div class="card-body">
       <div class="row">
         <div class="col my-2">
-          <h5 class="card-title text-center text-dark fw-bold" style="font-size: 2rem;">Login</h5>
+          <h5 class="card-title text-center text-custom fw-bold" >Login</h5>
           <form [formGroup]="miFormulario" autocomplete="off" (ngSubmit)="login()" class="mt-3">
             <div class="form-group mb-3">
-              <label class="my-1"><span class="fa fa-user mx-2 text-info"></span>Usuario</label>
+              <label class="my-1"><span class="fa fa-user mx-2"></span>Usuario</label>
               <input type="text" class="form-control" placeholder="Ingrese su usario" formControlName="username">
               <div class="form-text text-danger" *ngIf="usernameField?.invalid && usernameField?.touched">
                 <div *ngIf="usernameField?.errors?.['required']">
@@ -15,7 +19,7 @@
               </div>
             </div>
             <div class="form-group mb-3">
-              <label class="my-1"><span class="fa fa-lock mx-2 text-info"></span>Contraseña</label>
+              <label class="my-1"><span class="fa fa-lock mx-2"></span>Contraseña</label>
               <input type="password" class="form-control" placeholder="******" formControlName="password">
               <div class="form-text text-danger" *ngIf="passwordField?.invalid && passwordField?.touched">
                 <div *ngIf="passwordField?.errors?.['required']">
@@ -26,7 +30,7 @@
                 </div>
               </div>
             </div>
-            <button type="submit" class="btn btn-dark my-1" [disabled]="!miFormulario.valid">
+            <button type="submit" class="btn btn-custom-upload" [disabled]="!miFormulario.valid">
               Ingresar
             </button>
           </form>
