--- a/gmb-video/src/app/auth/pages/login/login.component.scss
+++ b/gmb-video/src/app/auth/pages/login/login.component.scss
@@ -2,3 +2,20 @@
   position: absolute;
   top: 5%;
 }
+.btn-custom-upload {
+  background-color: #2c77c5;
+  color: white;
+}
+span{
+  color: #2c77c5;
+}
+.text-custom {
+  color: #2c77c5;
+}
+
+.image-custom{
+  z-index: 2; 
+  top: -60px; 
+  left: 50%; 
+  transform: translateX(-50%);
+}
